src/BestSellers/bestsellers.scss
.slide-container {
    text-align: center;
    max-width: 1000px;
    margin: 0 auto;

    .carousel {
        padding: 60px;
        padding-left: 0;
        margin: 0 auto;
        margin-bottom: 100px;

        .carousel-status {
            position: absolute;
            bottom: -11px;
            left: 33%;
            right: auto;
            top: auto;
            color: #000000;
            font-size: 12px;
            font-family: MilanoReg;
        }

        .slide {
            background: transparent;
            height: 300px;
            border: .35px solid #e3e3e3;
            padding: 0;
            margin-right: 1.5%;
            display: flex;
            align-items: center;
            overflow: hidden;

            .carousel-slide {
                max-height: 100%;
                max-width: 100%;
                display: flex;
                justify-content: center;
                overflow: hidden;
                transition: .4s ease all;

                .flipimage {
                    -webkit-transform: scaleX(-1);
                    transform: scaleX(-1);
                }
            }

            &:hover {
                .carousel-slide {
                    -webkit-transform: scaleX(-1);
                    transform: scaleX(-1);

                    .frontimage {
                        display: none;
                    }
                }
            }

            img {
                height: 100%;
                width: auto;
                z-index: -1;
                transition: .3s ease all;
            }
        }

        .slider {
            left: -12.5%;
            display: flex;
            align-items: center;
        }

        .carousel-caption {
            display: none;
        }

        .control-prev{
            left: 25%;
        }

        .control-next{
            right: 25%;
        }

        .control-prev, .control-next {
            width: 50px;
            height: 50px;
            bottom: -5px;
            top: auto;
            opacity: 1;
            background-repeat: no-repeat;
        }
    }

    .carousel-inner {
        img {
            max-height: 200px;
            width: auto !important;
            margin: 0 auto;
        }
    }

    @media only screen and ( max-width: 1024px ) and ( min-width: 725px ) {
        .carousel .slide {
            height: 290px;
        }
    }

    @media only screen and ( min-width: 426px ) and ( max-width: 725px ){
        .carousel .slide {
            height: 180px;
        }
    }

    @media only screen and ( max-width: 426px ){
        .carousel{
            padding: 60px;

            .slider {
                left: 0;

                .slide {
                    margin-right: 0;
                    height: 410px;

                    .carousel-slide {
                        height: 100%;
                    }
                }
            }

            .control-prev{
                left: 14%;
            }
    
            .control-next{
                right: 14%;
            }
    
            .carousel-status {
                left: 30%;
            }
        }
    }
}

